# transaction-processor

./: Cargo.toml  README.md
src/: account.rs  io.rs  lib.rs  main.rs  moneys.rs  processor.rs
tests/: test-cases.rs
tests/test-cases/: imprecision.input.txt  imprecision.output.txt  test1.input.txt  test1.output.txt
