[package]
name = "transaction-processor"
version = "0.1.0"
authors = ["Jakub Horak <jakub.horak@ibawizard.net>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "3.1.8", features = ["derive"] }
csv = "1.1"
serde = { version = "1.0.55", features = ["derive"] }
anyhow = "*"
thiserror = "*"

